Update Index.html 22-nov-2024 4:05 pm

--- a/Index.html
+++ b/Index.html
@@ -14,5 +14,8 @@ Aptech garden .com
     <h2>
         computer center 
     </h2>
+    <div> 
+    Aptech computer institue sem 1 
+    </div>
 </body>
 </html>
